(env 
  (dev (flags (:standard -w -9..35 -g))))
(executable
 (modes byte)
 (modules ocamldumper)
 (preprocess
  (pps lwt_ppx))
 (libraries 
   ocaml-compiler-libs.bytecomp
   ocaml-compiler-libs.common
   ocaml-compiler-libs.optcomp
   ocaml-compiler-libs.shadow
   ocaml-compiler-libs.toplevel
   print_typed print_typ
   )
 (name ocamldumper))

(library
  (modes byte)
  (name print_typed)
  (modules print_typed)
 (libraries 
   ocaml-compiler-libs.bytecomp
   ocaml-compiler-libs.common
   ocaml-compiler-libs.optcomp
   ocaml-compiler-libs.shadow
   ocaml-compiler-libs.toplevel
   )
  )

  (library
  (modes byte)
  (name print_typ)
  (modules print_typ)
 (libraries 
   ocaml-compiler-libs.bytecomp
   ocaml-compiler-libs.common
   ocaml-compiler-libs.optcomp
   ocaml-compiler-libs.shadow
   ocaml-compiler-libs.toplevel
   )
  )
