(* -*- tuareg -*- *)

let impl_libs =
  Scanf.sscanf
    Sys.ocaml_version
    "%d.%2d.%s"
    (fun maj min _ ->
      match maj, min with
      | 4, 12 -> ["xprinttyp_412"]
      | 4, 14 -> ["xprinttyp_414"]
      | 5, _ -> ["xprinttyp_414"]
      (* | 4, min when min >= 12 -> ["printtyp_412"] *)
      | _ -> assert false)

let () = Jbuild_plugin.V1.send @@ {|
(env 
  (dev (flags (:standard -w -9..37 -g))))
(executable
 (name ocamldumper)
 (modes byte)
 (modules ocamldumper)
 (preprocess
  (pps lwt_ppx ppx_optcomp))
 (libraries 
   compiler-libs.bytecomp
   compiler-libs.common
   compiler-libs.optcomp
   compiler-libs.toplevel
   str
   opnames
   show_source
   compat
|} ^ String.concat "\n" impl_libs ^ {|))
|}
